--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 /* Font Style */
-.card-title,a,b,h2,h3,h4{
+.card-title,a,b,h1,h2,h3,h4{
     justify-content: center;
     font-family: 'East Sea Dokdo', sans-serif;
+}
+h1{
+    font-size: large;
 }
 p{
     font-family: 'Montserrat', sans-serif;
